--- a/client/src/index.css
+++ b/client/src/index.css
@@ -44,6 +44,7 @@
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
+  --color-prose-code: var(--prose-code);
 }
 
 :root {
@@ -79,6 +80,8 @@
   --sidebar-accent-foreground: oklch(0.205 0 0);
   --sidebar-border: oklch(0.922 0 0);
   --sidebar-ring: oklch(0.708 0 0);
+  --prose-code: oklch(0.5037 0.2041 357.41);
+  --prose-link: oklch(0.4633 0.1932 260.4);
 }
 
 .dark {
@@ -113,6 +116,8 @@
   --sidebar-accent-foreground: oklch(0.985 0 0);
   --sidebar-border: oklch(1 0 0 / 10%);
   --sidebar-ring: oklch(0.556 0 0);
+  --prose-code: oklch(82.3% 0.12 346.018);
+  --prose-link: oklch(0.7036 0.1586 253.42);
 }
 
 @layer base {
@@ -128,25 +133,31 @@
 
 @layer utilities {
 
-  .prose > * {
-    color: var(--color-primary)
+  .prose {
+    --tw-prose-body: var(--color-primary);
+    --tw-prose-headings: var(--color-primary);
+    --tw-prose-lead: var(--color-primary);
+    --tw-prose-bold: var(--color-primary);
+    --tw-prose-counters: var(--color-primary);
+    --tw-prose-bullets: var(--color-primary);
+    --tw-prose-hr: var(--color-primary);
+    --tw-prose-quotes: var(--color-primary);
+    --tw-prose-quote-borders: var(--color-primary);
+    --tw-prose-captions: var(--color-primary);
+    --tw-prose-code: var(--color-primary);
+    --tw-prose-th-borders: var(--color-primary);
+    --baseTextContrast: var(--color-primary);
+    --tw-prose-td-borders: var(--color-primary);
   }
 
-   .prose code {
+  .prose code {
     --baseBg: transparent;
-    @apply text-pink-400 dark:text-pink-300 before:content-none after:content-none;
+    --tw-prose-code: var(--prose-code);
+    @apply before:content-none after:content-none;
   }
-
+  
   .prose a {
-    @apply text-blue-500 dark:text-blue-400
-  }
-
-  .prose blockquote {
-    @apply border-l-stone-600;
-  }
-
-  .prose ::marker {
-    @apply text-stone-600;
+    --tw-prose-links: var(--prose-link);
   }
 
   .visible-nav {
