feat: adjust css, implement comment crud in client

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -135,21 +135,21 @@
 @layer utilities {
 
   .prose {
-    --tw-prose-body: var(--color-popover-foreground);
-    --tw-prose-headings: var(--color-popover-foreground);
-    --tw-prose-lead: var(--color-popover-foreground);
-    --tw-prose-bold: var(--color-popover-foreground);
-    --tw-prose-counters: var(--color-popover-foreground);
-    --tw-prose-bullets: var(--color-popover-foreground);
-    --tw-prose-hr: var(--color-popover-foreground);
-    --tw-prose-quotes: var(--color-popover-foreground);
-    --tw-prose-quote-borders: var(--color-popover-foreground);
-    --tw-prose-captions: var(--color-popover-foreground);
-    --tw-prose-code: var(--color-popover-foreground);
-    --tw-prose-th-borders: var(--color-popover-foreground);
-    --baseTextContrast: var(--color-popover-foreground);
-    --tw-prose-td-borders: var(--color-popover-foreground);
-  }
+    --tw-prose-body: var(--foreground);
+    --tw-prose-headings: var(--foreground);
+    --tw-prose-lead: var(--foreground);
+    --tw-prose-bold: var(--foreground);
+    --tw-prose-counters: var(--foreground);
+    --tw-prose-bullets: var(--foreground);
+    --tw-prose-hr: var(--foreground);
+    --tw-prose-quotes: var(--foreground);
+    --tw-prose-quote-borders: var(--foreground);
+    --tw-prose-captions: var(--foreground);
+    --tw-prose-code: var(--foreground);
+    --tw-prose-th-borders: var(--foreground);
+    --baseTextContrast: var(--foreground);
+    --tw-prose-td-borders: var(--foreground);
+}
 
   .prose code {
     --baseBg: transparent;
